--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </section>
       <section class="content__details">
         <h1 class="title">
-          <span class="content__accent">По-</span><br />смотри<br />в окно
+          <span class="content__accent">По-</span><br/>смотри<br/>в окно
         </h1>
         <div class="content__list-container">
           <ul class="content__list">
@@ -102,7 +102,7 @@
               <h2 class="content__video-card-title"></h2>
               <p class="content__video-card-description"></p>
             </div>
-            <img src="" alt="" class="content__video-card-thumbnail" />
+            <img src="" alt="" class="content__video-card-thumbnail"/>
           </article>
         </a>
       </li>
@@ -113,7 +113,7 @@
 
     <template class="error-template">
       <div class="error">
-        <h2 class="error__title">Из этого города нет видео :()</h2>
+        <h2 class="error__title">Из этого города нет видео :(</h2>
       </div>
     </template>
     <script src="./scripts/script.js"></script>
